redid the whole site :trollface:

--- a/404.html
+++ b/404.html
@@ -3,8 +3,8 @@
 <html prefix="og: https://ogp.me/ns#">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>TDK | 404</title>
-<link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
+<title>Foxel | 404</title>
+<link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
 <meta property="og:title" content="404" />
@@ -21,12 +21,8 @@
   gtag('config', 'G-DGG831PPRZ');
 </script>
 <body>
-    <div class="back">
-        <a href="index.html"><i class="far fa-arrow-left"></i><b> Home</b></a>
-        </div>
-        <br>
 <div class="goofed">
-    <img src="/assets/images/goof.png" width="500" height="233">
+    <img src="/assets/images/404/goof.png" width="500" height="233">
 </div>
 <div id="splash" class="randomtext">
     aaa
