--- a/goodies/archive.html
+++ b/goodies/archive.html
@@ -3,7 +3,7 @@
 <html prefix="og: https://ogp.me/ns#">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>TDK | Img.Share Archive</title>
+<title>Foxel | Img.Share Archive</title>
 <meta property="og:title" content="Img.Share Archive" />
 <head>
   <meta name="theme-color" content="#2e1c63">
@@ -32,10 +32,6 @@ a:hover {
 <audio src="/assets/sounds/AR Games Menu EX.mp3" autoplay>
   <p>If you are reading this, it is because your browser does not support the audio element.</p>
   </audio>
-<div class="back">
-  <a href="../goodies.html"><i class="far fa-arrow-left" style="color: rgb(90, 0, 143);"></i><b style="color: rgb(90, 0, 143);"> Goodies</b></a>
-  </div>
-  <br>
 
   <a href="https://drive.google.com/file/d/1dcW-R8Pldm6UYaVg1Ni83mHxZpC9Qbjo/view?usp=sharing"><h1>2021-07-13</h1></a>
 
