--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TDK | Home</title>
-    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
+    <title>Foxel | Home</title>
+    <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
     
       <meta charset="utf-8">
       <meta name="theme-color" content="#00807d">
@@ -10,8 +10,8 @@
        <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="styles.css">
       <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
-      <meta property="og:title" content="TDK" />
-      <meta property="og:image" content="https://www.thediamondk.com/assets/images/favicon.png" />
+      <meta property="og:title" content="Foxel" />
+      <meta property="og:image" content="https://www.thediamondk.com/assets/images/logo.png" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
       <script>
@@ -21,18 +21,29 @@
 
         gtag('config', 'G-DGG831PPRZ');
         </script>
-      </head>
-      <body>
-        <img src="assets/images/favicon.png" width="300px" height="300px" class="logo">
-      </body>
-      <div class="links">
-      <a href="bot.html" class="links"><i class="far fa-image"></i> Img.Share  </a> |  <a href="socials.html" class="links"><i class="far fa-share-alt"></i> Socials  </a>  |  <a href="loading.html" class="links"><i class="fas fa-gift"></i> Goodies  </a>
-      </div>
-      <br>
-      <br>
-      <div id="splash" class="randomtext">
-        aaa
-    </div>
+
+
+  <img class=logo src="assets/images/logo.png">
+
+<div class="belowlogo">
+<a href="loading.html">goodies</a> | <a href="projects.html">projects</a> | <a href="aboutme.html">about me</a> | <a href="https://www.youtube.com/foxelthefennic">youtube</a> | <a href="https://twitter.com/intent/user?user_id=1175853232029126658">twitter</a> | <a href="https://disboard.org/server/888964112007176252">discord</a>
+</div>
+
+<div class="event">
+  <img src="assets/images/index/halloween clip art.png" onclick="playGif(this)" />
+
+  <script>
+   function playGif(gif_img) {            
+    if (gif_img.src.endsWith(".gif"))
+    {
+     gif_img.src = gif_img.src.substring(0, gif_img.src.length - 3) + "png";
+    } else 
+    {
+     gif_img.src = gif_img.src.substring(0, gif_img.src.length - 3) + "gif";
+    }    
+   }
+  </script>
+</div>
 
     <script>
       //splash text
@@ -46,7 +57,4 @@
           "Owns Garfield Kart and Garfield Kart - Furious Racing"
       ][Math.floor(Math.random()*6)]
   </script>
-      
-      <div style="font-size:48px;text-align:center;">
-				<a href="https://twitter.com/FoxgirlSylvie"><i class="fab fa-twitter"></i></a> <a href="https://youtube.com/thediamondk"><i class="fab fa-youtube"></i></a> <a href="https://github.com/thediamondk"><i class="fab fa-github"></i></a>
 			</div><br><br>
