--- a/loading.html
+++ b/loading.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <title>TDK | Goodies</title>
-    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
+    <title>Foxel | Goodies</title>
+    <link rel="shortcut icon" type="image/png" href="assets/images/goodies/WSC Icon.png">
     <head>
       <meta charset="utf-8">
       <html prefix="og: https://ogp.me/ns#">
@@ -13,12 +13,12 @@
       <style>
                body {
           background-color: white;
-          cursor:url("assets/images/wii.cur"), default;
+          cursor:url("assets/images/goodies/wii.cur"), default;
         }
         a {
           font-family: "Wii";
           color: #8C8C8C;
-          cursor:url("assets/images/wii-hover.cur"), default;
+          cursor:url("assets/images/goodies/wii-hover.cur"), default;
         }
         a:hover {
           color: rgb(56, 56, 56);
@@ -41,7 +41,7 @@
   <audio src="/assets/sounds/loading.mp3" autoplay>
     <p>If you are reading this, it is because your browser does not support the audio element.</p>
     </audio>
-    <img src="assets/images/ring.png" alt="Wii Shop Channel Ring" width="100px" height="100px" class="spin">
+    <img src="assets/images/goodies/ring.png" alt="Wii Shop Channel Ring" width="100px" height="100px" class="spin">
     <br>
     <br>
     <a href="goodies.html">click here if your browser doesnt support redirects</a>
