--- a/projects.html
+++ b/projects.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
 
-<title>TDK | Img.Share</title>
-<link rel="shortcut icon" type="image/png" href="assets/images/Img.Share.png">
+<title>Foxel | Img.Share</title>
+<link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
 <head>
   <meta name="theme-color" content="#043141">
   <html prefix="og: https://ogp.me/ns#">
    <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
-  <meta property="og:title" content="Img.Share" />
-  <meta property="og:image" content="https://www.thediamondk.com/assets/images/Img.Share.png" />
-  <style>
-        body {
-  background-color: #043141; /* For browsers that do not support gradients */
-  background-image: linear-gradient(#10726b, #043141);
-}
-  </style>
+  <meta property="og:title" content="Foxel | Projects" />
+  <meta property="og:image" content="https://www.thediamondk.com/assets/images/logo.png" />
 <body>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
@@ -26,14 +20,12 @@
 
   gtag('config', 'G-DGG831PPRZ');
 </script>
-<div class="back">
-<a href="index.html"><i class="far fa-arrow-left"></i><b> Home</b></a>
-</div>
-<img src="assets/images/Img.Share.png" width="100px" height="100px" class="logo">
+<h1>My <s>Children</s> Projects:</h1>
 <br>
-<h1>Img.Share is a media sharing bot where you can post and get random images!</h1>
+<h1>Img.Share</h1>
+<h2>Img.Share is a media sharing bot where you can post and get random images!</h2>
 <br>
-<h1>Commands: (may be outdated)</h1>
+<h2>Commands: (may be outdated)</h2>
 
 <h3>ping:        Pings the bot</h3>
 <h3>invite:        Invites the bot</h3>
@@ -50,10 +42,12 @@
  <h2>No Racisim</h2>
  <h2>If you wouldnt show your friends/family it, dont post it (eg: dont post anything offensive)</h2>
 <br>
-<a href="https://discord.com/api/oauth2/authorize?client_id=848008372913176616&permissions=1024&scope=bot%20applications.commands"><h1>Click me to add the bot</h1></a>
+<a href="https://discord.com/api/oauth2/authorize?client_id=848008372913176616&permissions=1024&scope=bot%20applications.commands"><h2>Click me to add the bot</h2></a>
 
 <iframe src="https://discord.com/widget?id=849072022557818891&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-
-<h5>note: this bot is still in development so things will change</h5>
+<br>
+<h1>dumbass cookie run bot (@CRK_bot)</h1>
+<h2>dumbass cookie run bot is a bot that randomly posts something cookie run related every 30 minutes</h2>
+<a class="twitter-timeline" data-width="600" data-height="600" href="https://twitter.com/CRK_bot?ref_src=twsrc%5Etfw">Tweets by CRK_bot</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 </body>
 </html>
