--- a/goodies.html
+++ b/goodies.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <title>TDK | Goodies</title>
-    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
+    <title>Foxel | Goodies</title>
+    <link rel="shortcut icon" type="image/png" href="assets/images/goodies/WSC Icon.png">
     <head>
       <meta charset="utf-8">
       <html prefix="og: https://ogp.me/ns#">
@@ -12,13 +12,13 @@
       <meta property="og:title" content="Goodies" />
       <style>
         body {
-          background-image: url("assets/images/WSC.png");
-          cursor:url("assets/images/wii.cur"), default;
+          background-image: url("assets/images/goodies/WSC.png");
+          cursor:url("assets/images/goodies/wii.cur"), default;
         }
         a {
           font-family: "Wii";
           color: #8C8C8C;
-          cursor:url("assets/images/wii-hover.cur"), default;
+          cursor:url("assets/images/goodies/wii-hover.cur"), default;
         }
         a:hover {
           color: rgb(56, 56, 56);
@@ -40,36 +40,14 @@
   <audio src="/assets/sounds/WSC.mp3" autoplay>
     <p>If you are reading this, it is because your browser does not support the audio element.</p>
     </audio>
-    
-  <script>
-    var sites = [
-        'https://www.wicy.cool',
-        'https://bananaplays.com/',
-        'https://oscie.net',
-        'https://soafen.love',
-        'https://amongusinreal.life'
-    ];
 
-    function randomSite() {
-        var i = parseInt(Math.random() * sites.length);
-        location.href = sites[i];
-    }
-</script>
 <div class="button">
-  <img src="/assets/images/wii button.png">
-  <div class="centered"><a href="#" onclick="randomSite();" class="button">Random Site</a></div>
-</div>
-<div class="button">
-  <img src="/assets/images/wii button.png">
+  <img src="/assets/images/goodies/wii button.png">
   <div class="centered"><a href="https://cdn.discordapp.com/attachments/804545686707503134/863265036674924584/images.zip" class="button" style="font-size: 90%;">WSC Assets (thanks snoot!)</a></div>
 </div>
 <div class="button">
-  <img src="/assets/images/wii button.png">
+  <img src="/assets/images/goodies/wii button.png">
   <div class="centered"> <a href="goodies/archive.html" class="button">Img.Share Archive</a></div>
-</div>
-<div class="button">
-  <img src="/assets/images/wii button.png">
-  <div class="centered"> <a class="button" href="https://tag.rc24.xyz/302271402277339146/tag.max.png?randomizer=0.XOziWv" target="_blank" rel="noreferrer noopener">Riitag</a></div>
 </div>
 <div class="dot" id="line01">･･･････････････････････････････････････････････････････････････････････････</div>
 <script src="assets/js/konami.js"></script>
