forgot to add news stuff lol

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <html prefix="og: https://ogp.me/ns#">
        <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="assets/css/h-ticker.css">
       <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
       <meta property="og:title" content="Foxel" />
       <meta property="og:image" content="https://www.thediamondk.com/assets/images/logo.png" />
@@ -28,6 +29,11 @@
 <div class="belowlogo">
 <a href="loading.html">goodies</a> | <a href="projects.html">projects</a> | <a href="aboutme.html">about me</a> | <a href="https://www.youtube.com/foxelthefennic">youtube</a> | <a href="https://twitter.com/intent/user?user_id=1175853232029126658">twitter</a> | <a href="https://disboard.org/server/888964112007176252">discord</a>
 </div>
+<br>
+<div class="hwrap"><div class="hmove">
+  <div class="hitem">1234</div>
+  <div class="hitem">5678</div>
+</div></div>
 
 <div class="event">
   <img src="assets/images/index/halloween clip art.png" onclick="playGif(this)" />
