--- a/goodies/archive.html
+++ b/goodies/archive.html
@@ -4,11 +4,12 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Foxel | Img.Share Archive</title>
+<link rel="shortcut icon" type="image/png" href="assets/images/projects/Img.Share.png">
 <meta property="og:title" content="Img.Share Archive" />
 <head>
   <meta name="theme-color" content="#2e1c63">
   <link rel="stylesheet" href="../styles.css">
-  <link rel="shortcut icon" type="image/png" href="../assets/images/Img.Share.png">
+  <meta property="og:image" content="https://www.thediamondk.com/assets/images/projects/Img.Share.png" />
   <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
 </head>
 <style>
@@ -33,7 +34,8 @@ a:hover {
   <p>If you are reading this, it is because your browser does not support the audio element.</p>
   </audio>
 
+<div class="floating">
   <a href="https://drive.google.com/file/d/1dcW-R8Pldm6UYaVg1Ni83mHxZpC9Qbjo/view?usp=sharing"><h1>2021-07-13</h1></a>
-
+</div>
   <body style="background-color: rgb(31, 0, 41);"></body>
 </html>
