--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <title>Foxel | Home</title>
     <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
+    <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
     
       <meta charset="utf-8">
-      <meta name="theme-color" content="#00807d">
+      <meta name="theme-color" content="#f45c2e">
       <html prefix="og: https://ogp.me/ns#">
        <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="styles.css">
@@ -51,16 +52,8 @@
   </script>
 </div>
 
-    <script>
-      //splash text
-      document.getElementById('splash').innerText = 
-      [
-          "amogus",
-          "ඞ",
-          "the legs on the bus go step step step",
-          "fun fact: 🔰 must be displayed by drivers in Japan for one year after they receive their drivers licence. Similar to L-Plates used to identify learner drivers in other countries. (yeah i just stole this from emojipedia)",
-          "if you want to see some fresh spahgetti, look at the source code of the goodies page",
-          "Owns Garfield Kart and Garfield Kart - Furious Racing"
-      ][Math.floor(Math.random()*6)]
+<audio src="/assets/sounds/Nintendo Channel - Main Menu (Wii Rip).mp3" autoplay>
+  <p>If you are reading this, it is because your browser does not support the audio element.</p>
+  </audio>
   </script>
 			</div><br><br>
