--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<title>Foxel | Img.Share</title>
+<title>Foxel | Projects</title>
 <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
 <head>
   <meta name="theme-color" content="#043141">
@@ -20,21 +20,35 @@
 
   gtag('config', 'G-DGG831PPRZ');
 </script>
+<audio src="/assets/sounds/LittleBigPlanet 1 OST - My Earth Pod Theme.mp3" autoplay>
+  <p>If you are reading this, it is because your browser does not support the audio element.</p>
+  </audio>
 <h1>My <s>Children</s> Projects:</h1>
 <br>
+<img src="assets/images/projects/Img.Share.png" width="200" height="200">
 <h1>Img.Share</h1>
 <h2>Img.Share is a media sharing bot where you can post and get random images!</h2>
 <br>
 <h2>Commands: (may be outdated)</h2>
-
+<br>
+<h2>Get</h2>
+<h3>allmemes:        Shows all of the memes</h3>
+<h3>allpets:        Shows all of the pets</h3>
+<h3>certainmeme:        Gets a certain meme</h3>
+<h3>certainpet:        Gets a certain pet</h3>
+<h3>randomeme:        Gets a random meme</h3>
+<h3>randompet:        Gets a random pet</h3>
+<br>
+<h2>Post</h2>
+<h3>postmeme:        Posts A Meme to the Meme folder</h3>
+<h3>postpet:        Posts A Pet to the pet folder</h3>
+<br>
+<h2>Other</h2>
+<h3>guidelines:        Shows the Guidelines</h3>
+<h3>invite:        Sends an invite to the bot</h3>
 <h3>ping:        Pings the bot</h3>
-<h3>invite:        Invites the bot</h3>
-<h3>discord:        Sends the discord invite link</h3>
-<h3>postmeme:    Posts A Meme to the Meme folder</h3>
-<h3>postmemevideo:    Posts A Meme Video to the Meme folder</h3>
-<h3>postpet:    Posts A Pet to the Pet folder</h3>
-<h3>randommeme:  Gets a random Meme</h3>
-<h3>randompet:  Gets a random Meme</h3>
+<h3>reload:        Reloads all/one of the bots cogs</h3>
+<h3>server:        Sends an invite to join the official Img.Share server</h3>
   <br>
  <h1>Guidelines:</h1> 
  <h2>No NSFW</h2>
@@ -46,8 +60,24 @@
 
 <iframe src="https://discord.com/widget?id=849072022557818891&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<img src="assets/images/projects/dumbass cookie run bot.jpg" width="200" height="200">
 <h1>dumbass cookie run bot (@CRK_bot)</h1>
 <h2>dumbass cookie run bot is a bot that randomly posts something cookie run related every 30 minutes</h2>
 <a class="twitter-timeline" data-width="600" data-height="600" href="https://twitter.com/CRK_bot?ref_src=twsrc%5Etfw">Tweets by CRK_bot</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<img src="assets/images/projects/Fake Leak Bot.jpg" width="200" height="200">
+<h1>Fake Leak Bot (@fakeleakbot)</h1>
+<h2>Fake Leak bot is a bot that posts a randomly generated fake video game related leak every 30 minutes</h2>
+<a class="twitter-timeline" data-width="600" data-height="600" href="https://twitter.com/fakeleakbot?ref_src=twsrc%5Etfw">Tweets by fakeleakbot</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 </body>
 </html>
