--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
 <meta property="og:title" content="404" />
-<meta name="theme-color" content="#00807d">
+<meta name="theme-color" content="#f45c2e">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -21,6 +21,9 @@
   gtag('config', 'G-DGG831PPRZ');
 </script>
 <body>
+    <audio src="/assets/sounds/Everybody Votes Channel - Voter Data.mp3" autoplay>
+        <p>If you are reading this, it is because your browser does not support the audio element.</p>
+        </audio>
 <div class="goofed">
     <img src="/assets/images/404/goof.png" width="500" height="233">
 </div>
