--- a/aboutme.html
+++ b/aboutme.html
@@ -5,12 +5,12 @@
     <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
     
       <meta charset="utf-8">
-      <meta name="theme-color" content="#00807d">
+      <meta name="theme-color" content="#f45c2e">
       <html prefix="og: https://ogp.me/ns#">
        <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="styles.css">
       <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
-      <meta property="og:title" content="Foxel" />
+      <meta property="og:title" content="Foxel | About Me" />
       <meta property="og:image" content="https://www.thediamondk.com/assets/images/logo.png" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
@@ -23,6 +23,9 @@
         </script>
 
         <body>
+          <audio src="/assets/sounds/Nintendo 3DS Music - Notifications.mp3" autoplay>
+            <p>If you are reading this, it is because your browser does not support the audio element.</p>
+            </audio>
           <h1>About Me:</h1>
 
           <h3>Hello! I'm Sylvia!</h3>
