--- a/projects.html
+++ b/projects.html
@@ -79,5 +79,15 @@
 <h1>Fake Leak Bot (@fakeleakbot)</h1>
 <h2>Fake Leak bot is a bot that posts a randomly generated fake video game related leak every 30 minutes</h2>
 <a class="twitter-timeline" data-width="600" data-height="600" href="https://twitter.com/fakeleakbot?ref_src=twsrc%5Etfw">Tweets by fakeleakbot</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<img src="assets/images/projects/Images With Pikmin Music.webp" width="200" height="200">
+<h1>Images With Pikmin Music (@ImagesPikmin)</h1>
+<h2>Images With Pikmin Music is an account where i post well, images with pikmin music!</h2>
+<a class="twitter-timeline" data-width="600" data-height="600" href="https://twitter.com/ImagesPikmin?ref_src=twsrc%5Etfw">Tweets by ImagesPikmin</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 </body>
 </html>
