added credit and looping audio

--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
   gtag('config', 'G-DGG831PPRZ');
 </script>
 <body>
-    <audio src="/assets/sounds/Everybody Votes Channel - Voter Data.mp3" autoplay>
+    <audio src="/assets/sounds/Everybody Votes Channel - Voter Data.mp3" autoplay loop>
         <p>If you are reading this, it is because your browser does not support the audio element.</p>
         </audio>
 <div class="goofed">
