--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
   </script>
 </div>
 
-<audio src="/assets/sounds/Nintendo Channel - Main Menu (Wii Rip).mp3" autoplay>
+<div class="credit">
+<h5>logo made by <a href="https://twitter.com/intent/user?user_id=1299495426144559105">soichi</a></h5>
+</div>
+
+<audio src="/assets/sounds/Nintendo Channel - Main Menu (Wii Rip).mp3" autoplay loop>
   <p>If you are reading this, it is because your browser does not support the audio element.</p>
   </audio>
   </script>
