--- a/loading.html
+++ b/loading.html
@@ -39,7 +39,7 @@
   <div class="wiititle">Goodies</div>
   <div class="dot" id="line01" style="color: #8C8C8C;">･･･････････････････････････････････････････････････････････････････････････</div>
   <div class="wiititle" style="font-size: xx-large;">Connecting. Please wait...</div>
-  <audio src="/assets/sounds/loading.mp3" autoplay>
+  <audio src="/assets/sounds/loading.mp3" autoplay loop>
     <p>If you are reading this, it is because your browser does not support the audio element.</p>
     </audio>
     <img src="assets/images/goodies/ring.png" alt="Wii Shop Channel Ring" width="100px" height="100px" class="spin">
