--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
 
   gtag('config', 'G-DGG831PPRZ');
 </script>
-<audio src="/assets/sounds/LittleBigPlanet 1 OST - My Earth Pod Theme.mp3" autoplay>
+<audio src="/assets/sounds/LittleBigPlanet 1 OST - My Earth Pod Theme.mp3" autoplay loop>
   <p>If you are reading this, it is because your browser does not support the audio element.</p>
   </audio>
 <h1>My <s>Children</s> Projects:</h1>
