--- a/aboutme.html
+++ b/aboutme.html
@@ -23,7 +23,7 @@
         </script>
 
         <body>
-          <audio src="/assets/sounds/Nintendo 3DS Music - Notifications.mp3" autoplay>
+          <audio src="/assets/sounds/Nintendo 3DS Music - Notifications.mp3" autoplay loop>
             <p>If you are reading this, it is because your browser does not support the audio element.</p>
             </audio>
           <h1>About Me:</h1>
