--- a/goodies.html
+++ b/goodies.html
@@ -38,7 +38,7 @@
 <body>
   <div class="wiititle">Goodies</div>
   <div class="dot" id="line01">･･･････････････････････････････････････････････････････････････････････････</div>
-  <audio src="/assets/sounds/WSC.mp3" autoplay>
+  <audio src="/assets/sounds/WSC.mp3" autoplay loop>
     <p>If you are reading this, it is because your browser does not support the audio element.</p>
     </audio>
 
