updated localization files

--- a/aboutme.html
+++ b/aboutme.html
@@ -28,8 +28,8 @@
             </audio>
           <h1>About Me:</h1>
 
-          <h3>Hello! I'm Sylvia!</h3>
-          <h3>I'm a transfem pansexual who likes games like cookie run, game builder garage, roblox, ect</h3>
+          <h3>Hello! I'm Foxel! (Sylvia is my irl name, but id rather you call me foxel ^-^)</h3>
+          <h3>I'm a transfem pansexual who likes games like rec room, game builder garage, roblox, ect</h3>
           <h3>My pronouns are she/her (idc if you use they/them but <i>please</i> dont use he/him!!)</h3>
           <h3>I'm also a minor</h3>
           <br>
