--- a/goodies.html
+++ b/goodies.html
@@ -50,6 +50,10 @@
   <img src="/assets/images/goodies/wii button.png">
   <div class="centered"> <a href="goodies/archive.html" class="button">Img.Share Archive</a></div>
 </div>
+<div class="button">
+  <img src="/assets/images/goodies/wii button.png">
+  <div class="centered"> <a href="goodies/spin.html" class="button">SPIN</a></div>
+</div>
 <div class="dot" id="line01">･･･････････････････････････････････････････････････････････････････････････</div>
 <script src="assets/js/konami.js"></script>
 </body>
