--- a/goodies/archive.html
+++ b/goodies/archive.html
@@ -30,7 +30,7 @@ a:hover {
 
   gtag('config', 'G-DGG831PPRZ');
 </script>
-<audio src="/assets/sounds/AR Games Menu EX.mp3" autoplay>
+<audio src="/assets/sounds/AR Games Menu EX.mp3" autoplay loop>
   <p>If you are reading this, it is because your browser does not support the audio element.</p>
   </audio>
 
