--- a/goodies/spin.html
+++ b/goodies/spin.html
@@ -8,7 +8,7 @@
 <meta property="og:title" content="SPIN" />
 <head>
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <meta name="theme-color" content="#2e1c63">
+  <meta name="theme-color" content="rgb(146, 231, 146);">
   <link rel="stylesheet" href="../styles.css">
   <meta property="og:image" content="https://www.thediamondk.com/assets/images/spin/spin.gif" />
   <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
