--- a/branding.html
+++ b/branding.html
@@ -26,8 +26,8 @@
           <audio src="/assets/sounds/Wi-Fi Menu - Mario Kart Wii [OST].mp3" autoplay loop>
             <p>If you are reading this, it is because your browser does not support the audio element.</p>
             </audio>
-            <h1 style="color: #222222;">Main Color: #222222</h1>
-            <h1 style="color: #2a2a2a">Secondary Color: #2a2a2a</h1>
+            <h1 style="color: #dddddd;">Main Color: #222222</h1>
+            <h1 style="color: #d5d5d5">Secondary Color: #2a2a2a</h1>
             <br>
             <br>
             <br>
