--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
     
       <meta charset="utf-8">
-      <meta name="theme-color" content="#f45c2e">
+      <meta name="theme-color" content="#222222">
       <html prefix="og: https://ogp.me/ns#">
        <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="styles.css">
