merry chistmas BITCH

--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
   <div class="hitem">1234</div>
   <div class="hitem">5678</div>
 </div></div>
-
-<div class="event">
-  <img src="assets/images/index/halloween clip art.png" onclick="playGif(this)" />
+<br>
+<br>
+<div title="Merry Christmas BITCH!" class="event">
+  <a href="https://www.youtube.com/watch?v=bXy1iiQgOAM"><img src="assets/images/index/event.gif" width="100px" height="150px"></a>
+  <!-- <img src="assets/images/index/halloween clip art.png" onclick="playGif(this)" />
 
   <script>
    function playGif(gif_img) {            
@@ -52,7 +54,7 @@
     }    
    }
   </script>
-</div>
+</div> --->
 
 <audio src="/assets/sounds/Nintendo Channel - Main Menu (Wii Rip).mp3" autoplay loop>
   <p>If you are reading this, it is because your browser does not support the audio element.</p>
