updated about me ALOT

--- a/aboutme.html
+++ b/aboutme.html
@@ -28,19 +28,55 @@
             </audio>
           <h1>about me:</h1>
 
-          <h3>hello! i'm foxel! </h3>
-          <h3>i'm a transfem pansexual who likes games like vrchat and pikmin!</h3>
-          <h3>my pronouns are she/her and they/them! (<i>please</i> dont use he/him!!)</h3>
+          <h3>hello! i'm foxel/basalt! </h3>
+          <h3>i'm a transfem pansexual (currently questioning) who does funny coding stuff!!!11</h3>
+          <h3><a href="https://pronouny.xyz/u/foxelthefennic"><u>pronoun.xyz page</u></a></h3>
           <h3>i'm also a minor</h3>
+          <h3>i love making new friends so feel free to dm me :]</h3>
+          <h3>i dont know if i have any kins or comforts <s>and that kinda makes me sad</s></h3>
+          <h3>thinking about maybe making a pikmin xenogender but i dont know yet ¯\_(ツ)_/¯</h3>
           <br>
-          <h3>my interests are:</h3>
-          <h3>coding</h3>
-          <h3>music making</h3>
-          <h3>art</h3>
-          <h3>animation</h3>
-          <h3>video editing</h3>
-          <h3>modding</h3>
-          <h3><s>pirating</s></h3>
+          <h3>Interests:</h3>
+          <h3>Pikmin</h3>
+          <h3>VrChat</h3>
+          <h3>Javascript (dear lord help my soul)</h3>
+          <h3>WiiU Modding</h3>
+          <br>
+          <br>
+          <h1>DNI</h1>
+          <h3>mcyt stans (unless its old mcyt like stampy n shit then yo cool)</h3>
+          <h3>phobic of anything part of lgbtq+</h3>
+          <h3>pedos (MAPs), superstraights, and zoophiles (if you are any of these see a damn therapist)</h3>
+          <h3>hey pikmin enjoyers /j</h3>
+          <h3>pikmin haters /hj (unless you have a valid reason)</h3>
+          <br>
+          <br>
+          <h1>BYF</h1>
+          <h3>i hyperfix on things alot</h3>
+          <h3>overthink sometimes</h3>
+          <h3>very self conscious about my art</h3>
+          <h3>if i do something wrong, <i><u>please</u></i> tell me so i can improve</h3>
+          <h3>very easily influenced by friends</h3>
+          <h3>most of what i say is a joke</h3>
+          <h3>i know way too much about the pikmin series and the phineas and ferb/milo murphys law series</h3>
+          <h3>very self conscious about being annoying/pushy ; ;</h3>
+          <br>
+          <br>
+          <h1>COOL MOOTS!!!!</h1>
+          <a href="https://twitter.com/MoonPyro_">☆🖤OPHEEBOP🖤☆</a>| (makes cool art and also simping for one of their ocs :tro:)
+          <br>
+          <a href="https://twitter.com/drynotclickbait">a hopper kinnie</a>| (BOYFRIEND <33333333)
+          <br>
+          <a href="https://twitter.com/Wicycool">Wicycool</a>| (cool art/animator/coder friend)
+          <br>
+          <a href="https://twitter.com/YesIAmScxpter">Scxpter</a>| (also cool art friend)
+          <br>
+          <a href="https://twitter.com/thecallmeout">CallMeOut</a>| (very cool guy please commission them)
+          <br>
+          <a href="https://twitter.com/pikminium">Pikminium (The4Pikmin)</a>| (cool countryball guy just dont mention countryhumans around him)
+          <br>
+          <h3>and ALOT more people i am too lazy to mention</h3>
+          <h5>most of these ideas were totally not stolen from <a href="https://elliotsplayland.carrd.co">OpHeeBop's carrd</a></h5>
         </body>
 
 
