--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
   <br>
   <br>
 <div class="belowlogo">
-<a href="loading.html">goodies</a> |​ <a href="projects.html">projects</a> |​ <a href="aboutme.html">about me</a> |​ <a href="branding.html">branding</a> |​ <a href="https://www.youtube.com/foxelthefennic">youtube</a> |​ <a href="https://twitter.com/intent/user?user_id=1175853232029126658">twitter</a> |​ <a href="socials/discord.html">discord</a>
+<a href="loading.html">goodies</a> |​ <a href="projects.html">projects</a> |​ <a href="aboutme.html">about me</a> |​ <a href="branding.html">branding</a> |​ <a href="https://www.youtube.com/foxelthefennic">youtube</a> |​ <a href="https://twitter.com/intent/user?user_id=1175853232029126658">twitter</a> |​ <a href="socials/discord.html">discord</a> |​ <a href="https://pronouny.xyz/u/foxelthefennic">pronoun.xyz page</a>
 </div>
 <br>
 <div class="hwrap"><div class="hmove">
-  <div class="hitem">1234</div>
-  <div class="hitem">5678</div>
+  <div class="hmove">
+  <div class="hitem">New Video: <a href="https://www.youtube.com/watch?v=DtywYKYYUdg"><u>shitmin</u></a></div></div>
 </div></div>
 <br>
 <br>
