ACTUALLY fix it

--- a/contest/contest.html
+++ b/contest/contest.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Foxel | About Me</title>
-    <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
+    <title>BBft20DEGC</title>
+    <link rel="shortcut icon" type="image/png" href="assets/images/contest/bloomserver.png">
     
       <meta charset="utf-8">
       <meta name="theme-color" content="#1fba00">
@@ -10,7 +10,7 @@
        <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://proicons.netlify.app/css/icons.min.css">
-      <meta property="og:title" content="BBft10DMGC" />
+      <meta property="og:title" content="BBft20DEGC" />
       <meta property="og:image" content="https://www.thediamondk.com/assets/images/contest/bloomserver.png" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGG831PPRZ"></script>
@@ -27,7 +27,7 @@
           <p>If you are reading this, it is because your browser does not support the audio element.</p>
         </audio>
 
-        <h1 style="font-size: 50px;">BBft10DEGC</h1>
+        <h1 style="font-size: 50px;">BBft20DEGC</h1>
 
         <h2>Each team chooses one person to go up against the other team, each round is a best out of 2. 
         <br>Winning team gets a 20 Dollar Eshop Gift Card (or something else of around 20$, eg: play store gift card), they will choose who in their team gets it.</h2>
