--- a/contest/contest.html
+++ b/contest/contest.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>BBft20DEGC</title>
-    <link rel="shortcut icon" type="image/png" href="assets/images/contest/bloomserver.png">
+    <link rel="shortcut icon" type="image/png" href="../assets/images/contest/bloomserver.png">
     
       <meta charset="utf-8">
       <meta name="theme-color" content="#1fba00">
