PLEASE WORK I BEG

--- a/contest/contest.html
+++ b/contest/contest.html
@@ -48,5 +48,8 @@
         <a href="https://docs.google.com/document/d/1X7TBYRr4mbuu0QJ1UpyrGStn324tcfk7NNADtaJ0418/edit?usp=sharing"><u>Controller Help</u></a>
         <br>
         <br>
+        <h3>Teams:</h3>
+        <iframe src="https://docs.google.com/document/d/e/2PACX-1vT6-XaohD4MXw8o6wkyCHJQ3EqR1XW17RUYMWCmKEeO-3vg_DfLvr71fc-6nRbantxn_gW_K09FkqYa/pub?embedded=true" width="500px", height="300px" frameBorder="0"></iframe>
+        <br>
         <h5>If you have any questions, dm <u>basalt (foxel)#1337</u> (guy who made pikmin bloom rt bot)</h5>
       </body>
