--- a/contest/contest.html
+++ b/contest/contest.html
@@ -42,7 +42,7 @@
         <h3>Mods/Admins are allowed to join.</h3>
         <h3>You must have ok enough internet <a href="https://support.parsec.app/hc/en-us/articles/360001394931-Parsec-s-Network-Requirements"><u>(check here, make sure to press client too. also doesnt have to entierly fit, this is just for best preformance)</u></a></h3>
         <br>
-        <h3>You have all of January to practice, the entire event will be live streamed to twitch.</h3>
+        <h3>You have all of January to practice, the entire event will be posted to youtube.</h3>
         <h3>Signups Here: <a href="https://forms.gle/oUUakU6vnhUJQYeS9">https://forms.gle/oUUakU6vnhUJQYeS9</a></h3>
         <br>
         <a href="https://docs.google.com/document/d/1X7TBYRr4mbuu0QJ1UpyrGStn324tcfk7NNADtaJ0418/edit?usp=sharing"><u>Controller Help</u></a>
