--- a/socials/discord.html
+++ b/socials/discord.html
@@ -33,7 +33,7 @@
           <br>
           <br>
           <h1>Username:</h1>
-          <h2>basalt (foxel)#1337</h2>
+          <h2>basalt#1337</h2>
           <br>
           <br>
           <br>
