HELP IM QUESTIOINING MY GENDER

--- a/aboutme.html
+++ b/aboutme.html
@@ -29,7 +29,7 @@
           <h1>about me:</h1>
 
           <h3>hello! i'm foxel/basalt! </h3>
-          <h3>i'm a transfem pansexual (currently questioning) who does funny coding stuff!!!11</h3>
+          <h3>i'm genderfluid (i think) person who does funny coding stuff!!!11</h3>
           <h3><a href="https://pronouny.xyz/u/foxelthefennic"><u>pronoun.xyz page</u></a></h3>
           <h3>i'm also a minor</h3>
           <h3>i love making new friends so feel free to dm me :]</h3>
