--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 </div></div>
 <br>
 <br>
-<div title="Merry Christmas BITCH!" class="event">
+<!-- <div title="Merry Christmas BITCH!" class="event">
   <a href="https://www.youtube.com/watch?v=bXy1iiQgOAM"><img src="assets/images/index/event.gif" width="100px" height="150px"></a>
-  <!-- <img src="assets/images/index/halloween clip art.png" onclick="playGif(this)" />
+  <img src="assets/images/index/halloween clip art.png" onclick="playGif(this)" />
 
   <script>
    function playGif(gif_img) {            
