--- a/aboutme.html
+++ b/aboutme.html
@@ -50,11 +50,9 @@
           <br>
           <br>
           <h1>BYF</h1>
-          <h3>i hyperfix on things alot</h3>
           <h3>overthink sometimes</h3>
-          <h3>very self conscious about my art</h3>
+          <h3>very self conscious about my art, or anything i like do lol</h3>
           <h3>if i do something wrong, <i><u>please</u></i> tell me so i can improve</h3>
-          <h3>very easily influenced by friends</h3>
           <h3>most of what i say is a joke</h3>
           <h3>i know way too much about the pikmin series and the phineas and ferb/milo murphys law series</h3>
           <h3>very self conscious about being annoying/pushy ; ;</h3>
@@ -64,6 +62,8 @@
           <a href="https://twitter.com/MoonPyro_">☆🖤OPHEEBOP🖤☆</a>| (makes cool art and also simping for one of their ocs :tro:)
           <br>
           <a href="https://twitter.com/drynotclickbait">a hopper kinnie</a>| (BOYFRIEND <33333333)
+          <br>
+          <a href="https://twitter.com/Rendrox4943">Rendrox</a>| (ALSO BOYFRIEND??? NOT REALLY... :/)
           <br>
           <a href="https://twitter.com/Wicycool">Wicycool</a>| (cool art/animator/coder friend)
           <br>
