add "the cool place lmao"

--- a/socials/discord.html
+++ b/socials/discord.html
@@ -26,14 +26,19 @@
           <audio src="/assets/sounds/S.S. Drake - Pikmin 3.mp3" autoplay loop>
             <p>If you are reading this, it is because your browser does not support the audio element.</p>
             </audio>
+          <h1>Username:</h1>
+          <h2>basalt#1337</h2>
+          <br>
+          <br>
+          <br>
           <h1>Discord Server:</h1>
           <h2><a href=https://discord.gg/gHvspkpXEB>https://discord.gg/gHvspkpXEB</a></h2>
           <iframe src="https://discord.com/widget?id=764478212372824084&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
           <br>
           <br>
           <br>
-          <h1>Username:</h1>
-          <h2>basalt#1337</h2>
+          <h1>the cool place lmao</h1>
+          <iframe src="https://discord.com/widget?id=943165022014685184&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
           <br>
           <br>
           <br>
@@ -42,6 +47,4 @@
           <br>
           <iframe src="https://discord.com/widget?id=826485297276911678&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
         </body>
-
-
 			</div>
