--- a/socials/discord.html
+++ b/socials/discord.html
@@ -32,8 +32,8 @@
           <br>
           <br>
           <h1>Discord Server:</h1>
-          <h2><a href=https://discord.gg/gHvspkpXEB>https://discord.gg/gHvspkpXEB</a></h2>
-          <iframe src="https://discord.com/widget?id=764478212372824084&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+          <h2><a href=https://discord.gg/5qbjeYrGW9>https://discord.gg/5qbjeYrGW9</a></h2>
+          <iframe src="https://discord.com/widget?id=945320979398291456&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
           <br>
           <br>
           <br>
