--- a/aboutme.html
+++ b/aboutme.html
@@ -59,11 +59,9 @@
           <br>
           <br>
           <h1>COOL MOOTS!!!!</h1>
+          <a href="https://twitter.com/blzr_l">Blzr</a>| <3333
+          <br>
           <a href="https://twitter.com/MoonPyro_">☆🖤OPHEEBOP🖤☆</a>| (makes cool art and also simping for one of their ocs :tro:)
-          <br>
-          <a href="https://twitter.com/drynotclickbait">a hopper kinnie</a>| (BOYFRIEND <33333333)
-          <br>
-          <a href="https://twitter.com/Rendrox4943">Rendrox</a>| (ALSO BOYFRIEND??? NOT REALLY... :/)
           <br>
           <a href="https://twitter.com/Wicycool">Wicycool</a>| (cool art/animator/coder friend)
           <br>
